# bypassHiddenApiRestriction

./: .gitignore  README.md  build.gradle  publish.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/java/com/wind/example/bypass/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
bypassRestriction/: build.gradle
bypassRestriction/src/main/: AndroidManifest.xml
bypassRestriction/src/main/cpp/: main.cpp
bypassRestriction/src/main/cpp/bypass_dl/: CMakeLists.txt  bypass_dlopen.c  dlfcn_trampoline.h  dlfcn_trampoline32.S  dlfcn_trampoline64.S  efl_parser.c  efl_parser.h
bypassRestriction/src/main/cpp/include/: bypass_dlfcn.h  bypass_dlopen.h
bypassRestriction/src/main/cpp/utils/: common.h  utils.h
bypassRestriction/src/main/java/com/wind/hiddenapi/bypass/: HiddenApiBypass.java
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/cpp/: CMakeLists.txt  main.cpp
lib/src/main/cpp/bypass_dl/: bypass_dlfcn.c
lib/src/main/cpp/utils/: ScopedLocalRef.h
lib/src/main/java/com/wind/hiddenapi/bypass/: HiddenApiBypass.java
